fix(modal): top and bottom aligned modal

--- a/src/definitions/modules/modal.less
+++ b/src/definitions/modules/modal.less
@@ -327,15 +327,17 @@
 /* Resort to margin positioning if legacy */
 .ui.legacy.legacy.modal,
 .ui.legacy.legacy.page.dimmer > .ui.modal {
-  top: 50% !important;
   left: 50% !important;
 }
-
-.ui.legacy.legacy.page.dimmer > .ui.scrolling.modal,
-.ui.page.dimmer > .ui.scrolling.legacy.legacy.modal,
-.ui.top.aligned.legacy.legacy.page.dimmer > .ui.modal,
-.ui.top.aligned.dimmer > .ui.legacy.legacy.modal {
-  top: auto !important;
+.ui.legacy.legacy.modal:not(.aligned),
+.ui.legacy.legacy.page.dimmer > .ui.modal:not(.aligned) {
+  top: 50%;
+}
+.ui.legacy.legacy.page.dimmer > .ui.scrolling.modal:not(.aligned),
+.ui.page.dimmer > .ui.scrolling.legacy.legacy.modal:not(.aligned),
+.ui.top.aligned.legacy.legacy.page.dimmer > .ui.modal:not(.aligned),
+.ui.top.aligned.dimmer > .ui.legacy.legacy.modal:not(.aligned) {
+  top: auto;
 }
 
 .ui.legacy.overlay.fullscreen.modal {
@@ -361,27 +363,25 @@
 *******************************/
 
 /*--------------
-   Top Aligned
+   Aligned
 ---------------*/
 
-/* Top Aligned Modal */
-.modals.dimmer[class*="top aligned"] .modal {
-  margin: @topAlignedMargin auto;
+.ui.top.aligned.modal {
+  top: @topAlignedMargin;
 }
+.ui.bottom.aligned.modal {
+  bottom: @bottomAlignedMargin;
+}
+
 @media only screen and (max-width : @largestMobileScreen) {
-  .modals.dimmer[class*="top aligned"] .modal {
-    margin: @mobileTopAlignedMargin auto;
+  .ui.top.aligned.modal {
+    top: @mobileTopAlignedMargin;
+  }
+  .ui.bottom.aligned.modal {
+    bottom: @mobileBottomAlignedMargin;
   }
 }
-/* Legacy Top Aligned */
-.legacy.modals.dimmer[class*="top aligned"] {
-  padding-top: @topAlignedMargin;
-}
-@media only screen and (max-width : @largestMobileScreen) {
-  .legacy.modals.dimmer[class*="top aligned"] {
-    padding-top: @mobileTopAlignedMargin;
-  }
-}
+
 
 /*--------------
     Scrolling
